--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=myWSJTXEncoder
+application.title=myWSJTEncoder
 application.vendor=erik
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,11 +29,11 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/myWSJTXEncoder.jar
+dist.jar=${dist.dir}/myWSJTEncoder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.charm-glisten-6.0.6.jar=D:\\Erik\\Java downloads\\Gluon\\charm-glisten-6.0.6.jar
+file.reference.charm-glisten-6.0.6.jar=../../Java downloads/Gluon/charm-glisten-6.0.6.jar
 file.reference.jsyn-20171016.jar=../../Java downloads/JSyn/jsyn-20171016.jar
 includes=**
 jar.compress=false
@@ -71,7 +71,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
-jlink.launcher.name=myWSJTXEncoder
+jlink.launcher.name=myWSJTEncoder
 main.class=encoder.Start
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
