--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,10 @@ dist.jar=${dist.dir}/myWSJTEncoder.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.charm-glisten-6.0.6.jar=../../Java downloads/Gluon/charm-glisten-6.0.6.jar
-file.reference.jsyn-20171016.jar=../../Java downloads/JSyn/jsyn-20171016.jar
+file.reference.charm-glisten-6.0.6.jar=D:\\Erik\\Java downloads\\Gluon\\charm-glisten-6.0.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jsyn-20171016.jar}:\
     ${libs.JavaFX15.classpath}:\
     ${file.reference.charm-glisten-6.0.6.jar}
 # Space-separated list of extra javac options
@@ -83,7 +81,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Xmx2G --module-path "D:\\Erik\\Java downloads\\Java FX\\openjfx-15.0.1_windows-x64_bin-sdk\\javafx-sdk-15.0.1\\lib" --add-modules javafx.controls,javafx.fxml  -Djava.util.logging.config.file=console_logging.properties
+run.jvmargs=--module-path "D:\\Erik\\Java downloads\\Java FX\\openjfx-15.0.1_windows-x64_bin-sdk\\javafx-sdk-15.0.1\\lib" --add-modules javafx.controls,javafx.fxml  -Djava.util.logging.config.file=console_logging.properties
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
