--- a/DSP.properties
+++ b/DSP.properties
@@ -1,6 +1,2 @@
-#Fri Jan 21 10:26:47 CET 2022
-YAxisHigh=50000
-ReceivedAudioOut=Line 2 (Virtual Audio Cable)
-waterfallHigh=2000
-waterfallLow=0
-ReceivedAudioIn=Line 8 (Virtual Audio Cable)
+#Sat Feb 05 08:05:55 CET 2022
+ReceivedAudioOut=SMS23A350H (High Definition Audio Device)
