--- a/DSP.properties
+++ b/DSP.properties
@@ -1,2 +1,2 @@
-#Sat Feb 05 08:05:55 CET 2022
-ReceivedAudioOut=SMS23A350H (High Definition Audio Device)
+#Sat Feb 05 08:37:20 CET 2022
+ReceivedAudioOut=Line 2 (Virtual Audio Cable)
