--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -70,7 +70,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=myWSJTEncoder
-main.class=encoder.Start
+main.class=test.displayFrequencyDeviation.Start
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
