--- a/DSP.properties
+++ b/DSP.properties
@@ -1,2 +1,2 @@
-#Thu Feb 24 10:09:57 CET 2022
-ReceivedAudioOut=Line 17 (Virtual Audio Cable)
+#Fri Feb 25 15:51:37 CET 2022
+ReceivedAudioOut=White Speakers (USB Audio Device)
